Adding API example page!

--- a/junko-example/templates/base.html.jinja
+++ b/junko-example/templates/base.html.jinja
@@ -19,6 +19,7 @@
         <nav id="nav">
           <a href="{{ base_url_w_slash }}index.html">Home</a>
           <a href="{{ base_url_w_slash }}about.html">About</a>
+          <a href="{{ base_url_w_slash }}input.html">API test page</a>
         </nav>
         <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
       </div>
