--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -2009,10 +2009,12 @@ blue {
 	input[type="password"],
 	input[type="email"],
 	input[type="tel"],
+	input[type="url"],
+	input[type="search"],
 	select,
 	textarea {
-		-moz-appearance: none;
-		-webkit-appearance: none;
+/*		-moz-appearance: none;*/
+/*		-webkit-appearance: none;*/
 		-ms-appearance: none;
 		appearance: none;
 		background: rgba(144, 144, 144, 0.075);
@@ -2031,6 +2033,8 @@ blue {
 		input[type="password"]:invalid,
 		input[type="email"]:invalid,
 		input[type="tel"]:invalid,
+		input[type="url"]:invalid,
+		input[type="search"]:invalid,
 		select:invalid,
 		textarea:invalid {
 			box-shadow: none;
@@ -2040,6 +2044,8 @@ blue {
 		input[type="password"]:focus,
 		input[type="email"]:focus,
 		input[type="tel"]:focus,
+		input[type="url"]:focus,
+		input[type="search"]:focus,
 		select:focus,
 		textarea:focus {
 			border-color: #5385c1;
@@ -2050,6 +2056,11 @@ blue {
 		text-decoration: none;
 		display: block;
 		position: relative;
+	}
+
+	.inline-input {
+            width: 50%;
+	    display: inline;
 	}
 
 		.select-wrapper:before {
@@ -2082,6 +2093,8 @@ blue {
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="url"],
+	input[type="search"],
 	select {
 		height: 2.75em;
 	}
@@ -2093,13 +2106,13 @@ blue {
 	input[type="checkbox"],
 	input[type="radio"] {
 		-moz-appearance: none;
-		-webkit-appearance: none;
+		/* -webkit-appearance: none; */
 		-ms-appearance: none;
 		appearance: none;
 		display: block;
 		float: left;
-		margin-right: -2em;
-		opacity: 0;
+		/* margin-right: -2em; */
+		/* opacity: 0; */
 		width: 1em;
 		z-index: -1;
 	}
